--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,55 @@
 Library
+/Assembly-CSharp-firstpass.csproj
+/EditorToolsTest.sln
+/Assembly-CSharp.csproj
+/Assembly-CSharp-Editor.csproj
+/Assembly-CSharp-Editor-firstpass.csproj
+/UnityEngine.TestRunner.csproj
+/UnityEngine.TestRunner.Player.csproj
+/UnityEngine.UI.csproj
+/UnityEngine.UI.Player.csproj
+/UnityEngine.UI.Tests.csproj
+/Assembly-CSharp.Player.csproj
+/Assembly-CSharp-firstpass.Player.csproj
+/BAeditor.sln
+/DocCodeExamples.csproj
+/Unity.EditorCoroutines.Editor.csproj
+/Unity.Performance.Profile-Analyzer.Editor.csproj
+/Unity.Performance.Profile-Analyzer.EditorTests.csproj
+/Unity.Rider.Editor.csproj
+/Unity.Settings.Editor.csproj
+/Unity.Settings.Tests.csproj
+/Unity.TestTools.CodeCoverage.Editor.Compatibility.csproj
+/Unity.TestTools.CodeCoverage.Editor.csproj
+/Unity.TestTools.CodeCoverage.Editor.OpenCover.Model.csproj
+/Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.csproj
+/Unity.TextMeshPro.csproj
+/Unity.TextMeshPro.Editor.csproj
+/Unity.TextMeshPro.Editor.Tests.csproj
+/Unity.TextMeshPro.Player.csproj
+/Unity.TextMeshPro.Tests.csproj
+/Unity.Timeline.csproj
+/Unity.Timeline.Editor.csproj
+/Unity.Timeline.Player.csproj
+/Unity.VisualScripting.Core.csproj
+/Unity.VisualScripting.Core.Editor.csproj
+/Unity.VisualScripting.Core.Player.csproj
+/Unity.VisualScripting.Flow.csproj
+/Unity.VisualScripting.Flow.Editor.csproj
+/Unity.VisualScripting.Flow.Player.csproj
+/Unity.VisualScripting.SettingsProvider.Editor.csproj
+/Unity.VisualScripting.Shared.Editor.csproj
+/Unity.VisualScripting.State.csproj
+/Unity.VisualScripting.State.Editor.csproj
+/Unity.VisualScripting.State.Player.csproj
+/Unity.VisualStudio.Editor.csproj
+/Unity.VSCode.Editor.csproj
+/UnityEditor.TestRunner.csproj
+/UnityEditor.UI.csproj
+/UnityEditor.UI.EditorTests.csproj
+/Temp
+/UserSettings
+UserSettings
+.idea
+Logs
+obj
