--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,47 @@ UserSettings
 Logs
 obj
 /ProjectSettings/ProjectVersion.txt
+/Unity.CollabProxy.Editor.csproj
+/Sirenix.OdinInspector.Modules.Unity.Addressables.csproj
+/Sirenix.OdinInspector.Modules.Unity.Addressables.Player.csproj
+/UniTask.Addressables.csproj
+/UniTask.Addressables.Player.csproj
+/UniTask.csproj
+/UniTask.DOTween.csproj
+/UniTask.DOTween.Player.csproj
+/UniTask.Editor.csproj
+/UniTask.Linq.csproj
+/UniTask.Linq.Player.csproj
+/UniTask.Player.csproj
+/UniTask.TextMeshPro.csproj
+/UniTask.TextMeshPro.Player.csproj
+/Unity.Addressables.csproj
+/Unity.Addressables.Editor.csproj
+/Unity.Addressables.Editor.Tests.csproj
+/Unity.Addressables.Player.csproj
+/Unity.Addressables.Tests.csproj
+/Unity.AI.Navigation.csproj
+/Unity.AI.Navigation.Editor.ConversionSystem.csproj
+/Unity.AI.Navigation.Editor.csproj
+/Unity.AI.Navigation.Editor.Tests.csproj
+/Unity.AI.Navigation.Player.csproj
+/Unity.AI.Navigation.Tests.csproj
+/Unity.AI.Navigation.Updater.csproj
+/Unity.ResourceManager.csproj
+/Unity.ResourceManager.Player.csproj
+/Unity.ResourceManager.Tests.csproj
+/Unity.ScriptableBuildPipeline.csproj
+/Unity.ScriptableBuildPipeline.Editor.csproj
+/Unity.ScriptableBuildPipeline.Editor.Tests.csproj
+/Unity.ScriptableBuildPipeline.Player.csproj
+/Unity.ScriptableBuildPipeline.Tests.csproj
+/Unity.InputSystem.InGameHints.csproj
+/Unity.PlasticSCM.Editor.csproj
+/Packages/packages-lock.json
+/Unity.InputSystem.ForUI.Player.csproj
+/Unity.InputSystem.ForUI.csproj
+/Unity.InputSystem.IntegrationTests.csproj
+/Unity.InputSystem.Player.csproj
+/Unity.InputSystem.TestFramework.Player.csproj
+/Unity.InputSystem.TestFramework.csproj
+/Unity.InputSystem.csproj
